--- a/src/pages/blog/2019-07-16-blog-no-1.md
+++ b/src/pages/blog/2019-07-16-blog-no-1.md
@@ -1,19 +1,25 @@
 ---
 templateKey: blog-post
-title: 'Blog no#1'
+title: Overview
 date: 2019-07-16T04:55:14.076Z
-description: First blog
+description: >+
+  In general, compliance means conforming to a rule, such as a specification,
+  policy, standard or law. Regulatory compliance describes the goal that
+  organizations aspire to achieve in their efforts to ensure that they are aware
+  of and take steps to comply with relevant laws, policies, and regulations. Due
+  to the increasing number of regulations and need for operational transparency,
+  organizations are increasingly adopting the use of consolidated and harmonized
+  sets of compliance controls. This approach is used to ensure that all
+  necessary governance requirements can be met without the unnecessary
+  duplication of effort and activity from resources.
+
 featuredpost: true
 featuredimage: /img/gestion-del-compliance.jpg
 tags:
-  - '#Test'
+  - Wiki
 ---
-# **abcd**
+Regulations and accrediting organizations vary among fields, with examples such as PCI-DSS and GLBA in the financial industry, FISMA for U.S. federal agencies, HACCP for the food and beverage industry, and the Joint Commission and HIPAA in healthcare. In some cases other compliance frameworks (such as COBIT) or even standards (NIST) inform on how to comply with regulations.
 
 
 
-## Eli mai
-
-
-
-* cdef
+Some organizations keep compliance data—all data belonging or pertaining to the enterprise or included in the law, which can be used for the purpose of implementing or validating compliance—in a separate store for meeting reporting requirements. Compliance software is increasingly being implemented to help companies manage their compliance data more efficiently. This store may include calculations, data transfers, and audit trails.
